--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 ## src/messages.txt => src/messages.properties
 ## error.input.user = \uD14C\uC2A4\uD2B8 \uC774\uB807\uAC8C \uC4F0\uBA74 \uB428
+error.duplicate.user = \uC911\uBCF5\uB41C \uC544\uC774\uB514 \uC785\uB2C8\uB2E4.
