--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 ## src/messages.txt => src/messages.properties
 ## error.input.user = \uD14C\uC2A4\uD2B8 \uC774\uB807\uAC8C \uC4F0\uBA74 \uB428
 error.duplicate.user = \uC911\uBCF5\uB41C \uC544\uC774\uB514 \uC785\uB2C8\uB2E4.
+error.join.password = \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uBD88\uC77C\uCE58 \uD569\uB2C8\uB2E4.
