회원가입완료

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,4 @@
 ## error.input.user = \uD14C\uC2A4\uD2B8 \uC774\uB807\uAC8C \uC4F0\uBA74 \uB428
 error.duplicate.user = \uC911\uBCF5\uB41C \uC544\uC774\uB514 \uC785\uB2C8\uB2E4.
 error.join.password = \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uBD88\uC77C\uCE58 \uD569\uB2C8\uB2E4.
+typeMismatch.birth = YYYY-MM-DD \uD615\uC2DD\uC73C\uB85C \uC785\uB825\uD574 \uC8FC\uC138\uC694.
