--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,5 +3,5 @@
 error.duplicate.user = \uC911\uBCF5\uB41C \uC544\uC774\uB514 \uC785\uB2C8\uB2E4.
 error.join.password = \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uBD88\uC77C\uCE58 \uD569\uB2C8\uB2E4.
 typeMismatch.birth = YYYY-MM-DD \uD615\uC2DD\uC73C\uB85C \uC785\uB825\uD574 \uC8FC\uC138\uC694.
-error.login.user = \uC544\uC774\uB514\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+error.login.user = \uD574\uB2F9 \uC544\uC774\uB514\uAC00 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 error.loginpassword.user = \uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
